Initial world sync works

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "browserify": "*",
     "express": "*",
-    "sockjs": "*"
+    "sockjs": "*",
+    "hat": "*"
   },
   "devDependencies": {}
 }
